specs/001-typescript-to-zig-native/examples/invalid/duplicate-binding.ts
let value = 1;
let value = 2;
